# budgie-sample-applet

./: LICENSE  README.md  meson.build
src/: SampleApplet.plugin.in  SampleApplet.vala  meson.build
